# cortical-crowding

./: .gitignore  README.md  pyproject.toml
notebooks/: dev.ipynb
src/corticalcrowding/: __init__.py  cmag.py  config.py  corticalcrowding.py  crowding.py  regression.py
